--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+/******************************************************
+    RESET
+*******************************************************/
+* { margin:0; padding:0; }
+*, *:before, *:after { box-sizing:border-box; }
+
+/******************************************************
+    PAGE LAYOUT
+*******************************************************/
 
 body {
-  font-family: Montserrat, Helvetica, sans-serif;
-  background: #f4f4f4;
+    font-family: Roboto Flex, Helvetica, sans-serif;
+    font:14px/1.5em Arial, sans-serif;
+    color:#333;
+    background:gainsboro;
 }
 
+#page {margin:0 auto; padding:0 ; }
+#header, #footer { background:Gainsboro; }
+#header, #content { padding:20px; }
+#content { background:WhiteSmoke; }
+#footer { padding:40px 20px; }
+
+h1, h2 { line-height:1.2em; }
+ul { margin:10px 15px; }
+p { margin:10px 0; }
+
+
+/*-----------------------------------------------------
+    NAVBAR
+------------------------------------------------------*/
 nav {
   position: fixed;
   width: 100%;
@@ -204,4 +222,19 @@ nav {
   .nav-icon span {
     font-size: 20px;
   }
+}
+
+
+/******************************************************
+    BOTTOM FOOTER
+*******************************************************/
+
+#page {
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+}
+
+#content {
+    flex-grow:1;
 }
