--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 /******************************************************
     RESET
 *******************************************************/
-* { margin:0; padding:0; }
-*, *:before, *:after { box-sizing:border-box; }
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 /******************************************************
     PAGE LAYOUT
@@ -70,18 +75,18 @@ nav {
 }
 .navlinks-container a::after {
   content: "";
-  display: block;
+  display:block;
   position: absolute;
   bottom: -3px;
   width: 100%;
   height: 1px;
-  transform: scale(0);
+  transform: scaleX(0);
   transform-origin: left;
   background: #333;
   transition: transform 0.3s ease-out;
 }
 .navlinks-container a:hover::after {
-  transform: scaleX(1);
+    transform: scaleX(1);
 }
 
 .nav-authentication {
