--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
 }
 
 #header, #footer { background:Gainsboro; }
-#header, #content { padding:20px; }
+#header, #content { padding: 0 32px 0 32px;   }
 #content { background:WhiteSmoke; }
 #footer { padding:20px 20px;}
 h1, h2 { line-height:1.2em; }
 ul { margin:10px 15px; }
-p { margin:10px 0; }
+p {margin:10px 0; }
 
 
 /*-----------------------------------------------------
@@ -52,8 +52,8 @@ nav {
   font-family: Roboto Flex, sans-serif;
   font-size: 25px;
   margin-left: 10px;
-  font-weight: 400;
-  color: #333;
+  font-weight: 200;
+  color: #af7413;
 }
 
 .nav-icon img {
@@ -71,6 +71,7 @@ nav {
   font-weight: 500;
   text-decoration: none;
   color: #414141;
+  display:inline-block;
   position: relative;
 }
 .navlinks-container a::after {
@@ -112,7 +113,7 @@ nav {
   display: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 960px) {
   nav {
     padding: 15px 20px;
     position: relative;
