--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ nav {
   }
 
     #header, #content { padding: 0 32px 0 32px;   }
+    #footer { padding:20px 20px;}
 
   /* nav */
   .nav-icon {
