--- a/style.css
+++ b/style.css
@@ -20,10 +20,8 @@ body {
     background:gainsboro;
 }
 
-#header, #footer { background:Gainsboro; }
-#header, #content { padding: 67px 32px 0 32px;   }
-#content { background:WhiteSmoke; }
-#footer { padding:20px 20px;}
+#footer { padding:20px 20px; background:Gainsboro; }
+#content { padding: 67px 32px 0 32px; background:WhiteSmoke; }
 h1, h2 { line-height:1.2em; }
 ul { margin:10px 15px; }
 p {margin:10px 0; }
@@ -121,6 +119,7 @@ nav {
     min-height:100vh;
     display:flex;
     flex-direction:column;
+
 }
 
 #content {
