--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /******************************************************
@@ -14,101 +14,34 @@
 *******************************************************/
 
 body {
-    font-family: Roboto Flex, Helvetica, sans-serif;
-    font:14px/1.5em Arial, sans-serif;
-    color:#333;
-    background:gainsboro;
+    font-family:
+        Roboto Flex,
+        Helvetica,
+        sans-serif;
+    font:
+        14px/1.5em Arial,
+        sans-serif;
+    color: #333;
+    background: gainsboro;
 }
 
-#footer { padding:20px 20px; background:Gainsboro; }
-#content { padding: 67px 32px 0 32px; background:WhiteSmoke; }
-h1, h2 { line-height:1.2em; }
-ul { margin:10px 15px; }
-p {margin:10px 0; }
-
-
-/*-----------------------------------------------------
-    NAVBAR
-------------------------------------------------------*/
-nav {
-  position: fixed;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 15px 25px;
-  background: #fafafa;
-  box-shadow: inset 0 -1px 0 #c5c5c6;
+#footer {
+    padding: 20px 20px;
+    background: Gainsboro;
 }
-.nav-icon {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  margin-right: 20px;
+#content {
+    padding: 67px 32px 0 32px;
+    background: WhiteSmoke;
 }
-
-.nav-icon span {
-  font-family: Roboto Flex, sans-serif;
-  font-size: 25px;
-  margin-left: 10px;
-  font-weight: 200;
-  color: #af7413;
+h1,
+h2 {
+    line-height: 1.2em;
 }
-
-.nav-icon img {
-  width: 40px;
-  transform: rotate(-17deg) translateX(5px);
+ul {
+    margin: 10px 15px;
 }
-
-.hamburger {
-  display: none;
-}
-
-.navlinks-container a {
-  margin: 0 10px;
-  font-size: 16px;
-  font-weight: 500;
-  text-decoration: none;
-  color: #414141;
-  display:inline-block;
-  position: relative;
-}
-.navlinks-container a::after {
-  content: "";
-  display:block;
-  position: absolute;
-  bottom: -3px;
-  width: 100%;
-  height: 1px;
-  transform: scaleX(0);
-  transform-origin: left;
-  background: #333;
-  transition: transform 0.3s ease-out;
-}
-.navlinks-container a:hover::after {
-    transform: scaleX(1);
-}
-
-.nav-authentication {
-  margin-left: auto;
-}
-
-.sign-btns button {
-  font-family: Roboto Flex, sans-serif;
-  font-size: 16px;
-  min-width: 90px;
-  padding: 10px 5px;
-  margin: 0 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-}
-
-.sign-btns button:nth-child(2) {
-  border: none;
-  background: rgba(146, 195, 238, 0.718);
-}
-.user-toggler {
-  display: none;
+p {
+    margin: 10px 0;
 }
 
 /******************************************************
@@ -116,14 +49,101 @@ nav {
 *******************************************************/
 
 #page {
-    min-height:100vh;
-    display:flex;
-    flex-direction:column;
-
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 #content {
-    flex-grow:1;
+    flex-grow: 1;
+}
+
+/*-----------------------------------------------------
+    NAVBAR
+------------------------------------------------------*/
+nav {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 15px 25px;
+    background: #fafafa;
+    box-shadow: inset 0 -1px 0 #c5c5c6;
+}
+.nav-icon {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+.nav-icon span {
+    font-family:
+        Roboto Flex,
+        sans-serif;
+    font-size: 25px;
+    margin-left: 10px;
+    font-weight: 200;
+    color: #af7413;
+}
+
+.nav-icon img {
+    width: 40px;
+    transform: rotate(-17deg) translateX(5px);
+}
+
+.hamburger {
+    display: none;
+}
+
+.navlinks-container a {
+    margin: 0 10px;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #414141;
+    display: inline-block;
+    position: relative;
+}
+.navlinks-container a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    transform: scaleX(0);
+    transform-origin: left;
+    background: #333;
+    transition: transform 0.3s ease-out;
+}
+.navlinks-container a:hover::after {
+    transform: scaleX(1);
+}
+
+.nav-authentication {
+    margin-left: auto;
+}
+
+.sign-btns button {
+    font-family:
+        Roboto Flex,
+        sans-serif;
+    font-size: 16px;
+    min-width: 90px;
+    padding: 10px 5px;
+    margin: 0 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+}
+
+.sign-btns button:nth-child(2) {
+    border: none;
+    background: rgba(146, 195, 238, 0.718);
+}
+.user-toggler {
+    display: none;
 }
 
 /******************************************************
@@ -131,119 +151,115 @@ nav {
 *******************************************************/
 
 @media (max-width: 960px) {
-  nav {
-    padding: 15px 20px;
-    position: relative;
-  }
+    nav {
+        padding: 15px 20px;
+        position: relative;
+    }
 
-    #header, #content { padding: 0 32px 0 32px;   }
-    #footer { padding:20px 20px;}
+    /* nav */
+    .nav-icon {
+        order: 2;
+        margin: 0 auto;
+    }
 
-  /* nav */
-  .nav-icon {
-    order: 2;
-    margin: 0 auto;
-  }
+    .nav-icon span {
+        font-size: 22px;
+    }
+    .main-navlinks {
+        order: 1;
+        width: auto;
+    }
 
-  .nav-icon span {
-    font-size: 22px;
-  }
-  .main-navlinks {
-    order: 1;
-    width: auto;
-  }
+    /* hamburger */
+    .hamburger {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        border: none;
+        display: flex;
+        background: #fafafa;
+        align-items: center;
+        position: relative;
+    }
 
-  /* hamburger */
-  .hamburger {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    border: none;
-    display: flex;
-    background: #fafafa;
-    align-items: center;
-    position: relative;
-  }
+    .hamburger span {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background: #333;
+        position: absolute;
+        pointer-events: none;
+        transition: opacity 0.3s 0.15s ease-out;
+    }
+    .hamburger span:nth-child(1),
+    .hamburger span:nth-child(3) {
+        transition: transform 0.3s ease-out;
+    }
 
-  .hamburger span {
-    display: block;
-    width: 100%;
-    height: 2px;
-    background: #333;
-    position: absolute;
-    pointer-events: none;
-    transition: opacity 0.3s 0.15s ease-out;
-  }
-  .hamburger span:nth-child(1),
-  .hamburger span:nth-child(3) {
-    transition: transform 0.3s ease-out;
-  }
+    .hamburger span:nth-child(1) {
+        transform: translateY(7px);
+    }
+    .hamburger span:nth-child(3) {
+        transform: translateY(-7px);
+    }
 
-  .hamburger span:nth-child(1) {
-    transform: translateY(7px);
-  }
-  .hamburger span:nth-child(3) {
-    transform: translateY(-7px);
-  }
+    .hamburger.open span:nth-child(1) {
+        transform: translate(0) rotate(135deg);
+    }
+    .hamburger.open span:nth-child(2) {
+        opacity: 0;
+        transition: opacity 0s ease-out;
+    }
+    .hamburger.open span:nth-child(3) {
+        transform: translate(0) rotate(-135deg);
+    }
 
-  .hamburger.open span:nth-child(1) {
-    transform: translate(0) rotate(135deg);
-  }
-  .hamburger.open span:nth-child(2) {
-    opacity: 0;
-    transition: opacity 0s ease-out;
-  }
-  .hamburger.open span:nth-child(3) {
-    transform: translate(0) rotate(-135deg);
-  }
+    .navlinks-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        position: absolute;
+        background: #fafafa;
+        top: 100%;
+        left: 0;
+        transform: translate(-100%);
+        height: 100vh;
+        padding: 15px 50px 15px 20px;
+        border-right: 1px solid #c5c5c6;
+    }
+    .open {
+        transform: translate(0%);
+    }
 
-  .navlinks-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: absolute;
-    background: #fafafa;
-    top: 100%;
-    left: 0;
-    transform: translate(-100%);
-    height: 100vh;
-    padding: 15px 50px 15px 20px;
-    border-right: 1px solid #c5c5c6;
-  }
-  .open {
-    transform: translate(0%);
-  }
+    .navlinks-container a {
+        font-size: 18px;
+        margin: 10px 0;
+    }
 
-  .navlinks-container a {
-    font-size: 18px;
-    margin: 10px 0;
-  }
+    .nav-authentication {
+        order: 3;
+        margin-left: 0;
+    }
+    .sign-btns {
+        display: none;
+    }
 
+    .user-toggler {
+        display: block;
+        cursor: pointer;
+        border: none;
+    }
 
-  .nav-authentication {
-    order: 3;
-    margin-left: 0;
-  }
-  .sign-btns {
-    display: none;
-  }
-
-  .user-toggler {
-    display: block;
-    cursor: pointer;
-    border: none;
-  }
-
-  .user-toggler img {
-    width: 20px;
-  }
+    .user-toggler img {
+        width: 20px;
+    }
 }
 
 @media (max-width: 500px) {
-  .nav-icon img {
-    width: 30px;
-  }
-  .nav-icon span {
-    font-size: 20px;
-  }
+    .nav-icon img {
+        width: 30px;
+    }
+    .nav-icon span {
+        font-size: 20px;
+    }
 }
