--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     font:
         14px/1.5em Arial,
         sans-serif;
+        font-weight: 200;
     color: #333;
     background: gainsboro;
 }
