--- a/style.css
+++ b/style.css
@@ -152,6 +152,11 @@ nav {
 *******************************************************/
 
 @media (max-width: 960px) {
+
+  #content {
+    padding: 0 32px 0 32px;
+}
+
     nav {
         padding: 15px 20px;
         position: relative;
@@ -257,10 +262,13 @@ nav {
 }
 
 @media (max-width: 500px) {
+
+
+
     .nav-icon img {
-        width: 30px;
+        width: 26px;
     }
     .nav-icon span {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
