--- a/style.css
+++ b/style.css
@@ -59,6 +59,21 @@ p {
     flex-grow: 1;
 }
 
+    footer-container {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: flex-end;
+        position: absolute;
+        background: #fafafa;
+        top: 100%;
+        left: 0;
+        transform: translate(-100%);
+        height: 100vh;
+        padding: 15px 50px 15px 20px;
+        border-right: 1px solid #c5c5c6;
+    }
+
+
 /*-----------------------------------------------------
     NAVBAR
 ------------------------------------------------------*/
