--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /******************************************************
     RESET
 *******************************************************/
+
 *,
 ::before,
 ::after {
@@ -39,6 +40,10 @@ h2 {
     line-height: 1.2em;
 }
 ul {
+    margin: 10px 15px;
+    }
+li {
+    text-decoration: solid;
     margin: 10px 15px;
 }
 p {
