--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ p {
     margin: 10px 0;
 }
 
+initiale a {
+font-size: xx-large;
+}
+
 /******************************************************
     BOTTOM FOOTER
 *******************************************************/
