--- a/style.css
+++ b/style.css
@@ -1,299 +1,356 @@
-/******************************************************
-    RESET
-*******************************************************/
+/* Google font */
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-*,
-::before,
-::after {
-    box-sizing: border-box;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth !important;
+}
+
+:root {
+    /* Colors */
+    --white-color: #3d7489;
+    --darker-color: #3b3737;
+    --dark-color: #131224;
+    --primary-color: #ffffff;
+    --secondary-color: #1b89aa;
+    --light-pink-color: #f4d5da --medium-gray-color: #ccc;
+    --highlighted-color: #81226f;
+    --footer-color: rgb(205, 205, 205);
+
+    /* Font size */
+    --font-size-xs: 0.7rem;
+    --font-size-s: 0.9rem;
+    --font-size-n: 1rem;
+    --font-size-m: 1.12rem;
+    --font-size-l: 1.5rem;
+    --font-size-xl: 2rem;
+    --font-size-xxl: 2.3rem;
+
+    /* Font weight */
+    --font-weight-normal: 400;
+    --font-weight-medium: 500;
+    --font-weight-semibold: 600;
+    --font-weight-bold: 700;
+
+    /* Border radius */
+    --border-radius-s: 8px;
+    --border-radius-m: 30px;
+    --border-radius-circle: 50%;
+
+    /* Site max width */
+    --site-max-width: 1300px;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+img {
+    width: 100%;
+}
+
+.section-content {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: var(--site-max-width);
+}
+
+.section-title {
+    text-align: center;
+    padding: 0 0 24px;
+    text-transform: uppercase;
+    font-size: var(--font-size-xl);
+}
+
+.section-title::after {
+    content: "";
+    width: 80px;
+    height: 5px;
+    display: block;
+    margin: 10px auto 0;
+    border-radius: var(--border-radius-s);
+    background: var(--secondary-color);
+}
+
+/* Navbar Styling*/
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 5;
+    background: var(--primary-color);
+}
+
+header .navbar {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .nav-logo .logo-text {
+    color: var(--white-color);
+    font-size: var(--font-size-xl);
+    font-weight: var(--font-weight-normal);
+}
+
+.logo {
+    margin-bottom: -3px;
+    width: 28px;
+    height: 28px;
+}
+
+.navbar .nav-menu {
+    display: flex;
+    gap: 10px;
+}
+
+.navbar .nav-menu .nav-link {
+    padding: 10px 18px;
+    color: var(--white-color);
+    font-size: var(--font-size-m);
+    border-radius: var(--border-radius-s);
+    transition: 0.2s ease;
+}
+
+.navbar .nav-menu .nav-link:hover {
+    color: var(--primary-color);
+    background: var(--secondary-color);
+}
+
+.navbar :where(#menu-close-button, #menu-open-button) {
+    display: none;
+}
+
+/* Hero Section styling */
+
+.hero-section {
+    min-height: 100vh;
+    background: var(--primary-color);
+}
+
+.hero-section .section-content {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    color: var(--white-color);
+    justify-content: space-between;
+}
+
+.hero-section .hero-details .title {
+    font-size: var(--font-size-xxl);
+    color: var(--secondary-color);
+    font-family: "Cormorant+Garamond", sans-serif;
+}
+
+.hero-section .hero-details .subtitle {
+    margin: 8px 0 40px;
+    max-width: 70%;
+    font-size: var(--font-size-m);
+    font-weight: var(--font-size-m);
+}
+
+.hero-section .hero-details .description {
+    color: var(--darker-color);
+    max-width: 95%;
+    margin: 24px 0 40px;
+    font-size: var(--font-size-s);
+}
+
+.hero-section .hero-details .buttons {
+    display: flex;
+    gap: 23px;
+}
+
+.hero-section .hero-details .button {
+    padding: 10px 26px;
+    border: 2px solid transparent;
+    color: var(--primary-color);
+    border-radius: var(--border-radius-s);
+    background: var(--secondary-color);
+    font-weight: var(--font-weight-medium);
+    transition: 0.2s ease;
+}
+
+.hero-section .hero-details .button:hover,
+.hero-section .hero-details .reverse {
+    color: var(--white-color);
+    border-color: var(--white-color);
+    background: transparent;
+}
+.hero-section .hero-details .reverse:hover {
+    color: var(--primary-color);
+    border-color: var(--secondary-color);
+    background: var(--secondary-color);
+}
+
+.hero-section .hero-image-wrapper {
+    max-width: 500px;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
+/* About section styling */
+.about-section {
+    padding: 120px 0;
+    background: var(--light-pink-color);
+}
+
+.about-section .section-content {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-section .about-image-wrapper .about-image {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: var(--border-radius-circle);
+}
+
+.about-section .about-details .section-title {
     padding: 0;
 }
 
-/******************************************************
-    PAGE LAYOUT
-*******************************************************/
-
-body {
-    font-family:
-        Roboto Flex,
-        Helvetica,
-        sans-serif;
-    font:
-        14px/1.5em Arial,
-        sans-serif;
-        font-weight: 200;
-    color: #333;
-    background: gainsboro;
+.about-section .about-details {
+    max-width: 50%;
 }
 
-#footer {
-    padding: 20px 20px;
-    background: Gainsboro;
-}
-#content {
-    padding: 67px 32px 0 32px;
-    background: WhiteSmoke;
-}
-h1,
-h2 {
-    line-height: 1.2em;
-}
-ul {
-    margin: 10px 15px;
-    list-style-type:none;
-}
-li {
-    margin: 10px 15px;
-}
-p {
-    margin: 10px 0;
+.about-section .about-details .text {
+    line-height: 30px;
+    margin: 50px 0 30px;
+    text-align: center;
+    font-size: var(--font-size-m);
 }
 
-initiale a {
-font-size: xx-large;
-}
-
-/******************************************************
-    BOTTOM FOOTER
-*******************************************************/
-
-#page {
-    min-height: 100vh;
+.about-hero .social-link-list {
+    background: var(--footer-color);
+    margin-top: 12px;
+    padding: 6px 0px 14px 0px;
     display: flex;
-    flex-direction: column;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
 }
 
-#content {
-    flex-grow: 1;
+.about-hero .social-link-list .social-link {
+    color: var(--secondary-color);
+    font-size: var(--font-size-s);
+    transition: 0.2s ease;
 }
 
-    footer-container {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: flex-end;
-        position: absolute;
-        background: #fafafa;
-        top: 100%;
+.about-hero .social-link-list .social-link:hover {
+    color: var(--highlighted-color);
+}
+
+/* Responsive media query code for max width 920px */
+@media screen and (max-width: 1060px) {
+    :root {
+        --font-size-m: 1rem;
+        --font-size-1: 1.3rem;
+        --font-size-xl: 1.5rem;
+        --font-size-xxl: 1.8rem;
+    }
+
+    body.show-mobile-menu header::before {
+        content: "";
+        position: fixed;
         left: 0;
-        transform: translate(-100%);
-        height: 100vh;
-        padding: 15px 50px 15px 20px;
-        border-right: 1px solid #c5c5c6;
-    }
-
-
-/*-----------------------------------------------------
-    NAVBAR
-------------------------------------------------------*/
-nav {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 15px 25px;
-    background: #fafafa;
-    box-shadow: inset 0 -1px 0 #c5c5c6;
-}
-.nav-icon {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    margin-right: 20px;
-}
-
-.nav-icon span {
-    font-family:
-        Roboto Flex,
-        sans-serif;
-    font-size: 25px;
-    margin-left: 10px;
-    font-weight: 200;
-    color: #af7413;
-}
-
-.nav-icon img {
-    width: 40px;
-    transform: rotate(-17deg) translateX(5px);
-}
-
-.hamburger {
-    display: none;
-}
-
-.navlinks-container a {
-    margin: 0 10px;
-    font-size: 16px;
-    font-weight: 500;
-    text-decoration: none;
-    color: #414141;
-    display: inline-block;
-    position: relative;
-}
-.navlinks-container a::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: -3px;
-    width: 100%;
-    height: 1px;
-    transform: scaleX(0);
-    transform-origin: left;
-    background: #333;
-    transition: transform 0.3s ease-out;
-}
-.navlinks-container a:hover::after {
-    transform: scaleX(1);
-}
-
-.nav-authentication {
-    margin-left: auto;
-}
-
-.sign-btns button {
-    font-family:
-        Roboto Flex,
-        sans-serif;
-    font-size: 16px;
-    min-width: 90px;
-    padding: 10px 5px;
-    margin: 0 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-}
-
-.sign-btns button:nth-child(2) {
-    border: none;
-    background: rgba(146, 195, 238, 0.718);
-}
-.user-toggler {
-    display: none;
-}
-
-/******************************************************
-    reactive
-*******************************************************/
-
-@media (max-width: 960px) {
-
-  #content {
-    padding: 68px 32px 0 32px;
-    }
-
-    nav {
-        padding: 15px 20px;
-    }
-
-    /* nav */
-    .nav-icon {
-        order: 2;
-        margin: 0 auto;
-    }
-
-    .nav-icon span {
-        font-size: 22px;
-    }
-    .main-navlinks {
-        order: 1;
-        width: auto;
-    }
-
-    /* hamburger */
-    .hamburger {
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-        border: none;
-        display: flex;
-        background: #fafafa;
-        align-items: center;
-        position: relative;
-    }
-
-    .hamburger span {
-        display: block;
+        top: 0;
+        height: 100%;
         width: 100%;
-        height: 2px;
-        background: #333;
+        backdrop-filter: blur(5px);
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    .navbar :where(#menu-close-button, #menu-open-button) {
+        display: block;
+        font-size: var(--font-size-l);
+    }
+
+    .navbar #menu-close-button {
         position: absolute;
-        pointer-events: none;
-        transition: opacity 0.3s 0.15s ease-out;
-    }
-    .hamburger span:nth-child(1),
-    .hamburger span:nth-child(3) {
-        transition: transform 0.3s ease-out;
+        right: 30px;
+        top: 30px;
     }
 
-    .hamburger span:nth-child(1) {
-        transform: translateY(7px);
-    }
-    .hamburger span:nth-child(3) {
-        transform: translateY(-7px);
+    .navbar #menu-open-button {
+        color: var(--white-color);
     }
 
-    .hamburger.open span:nth-child(1) {
-        transform: translate(0) rotate(135deg);
-    }
-    .hamburger.open span:nth-child(2) {
-        opacity: 0;
-        transition: opacity 0s ease-out;
-    }
-    .hamburger.open span:nth-child(3) {
-        transform: translate(0) rotate(-135deg);
-    }
-
-    .navlinks-container {
+    .navbar .nav-menu {
+        position: fixed;
+        left: -300px;
+        top: 0;
+        width: 300px;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        position: absolute;
-        background: #fafafa;
-        top: 100%;
+        align-items: center;
+        padding-top: 100px;
+        background: var(--white-color);
+        transition: left 0.2s ease;
+    }
+
+    body.show-mobile-menu .navbar .nav-menu {
         left: 0;
-        transform: translate(-100%);
-        height: 100vh;
-        padding: 15px 50px 15px 20px;
-        border-right: 1px solid #c5c5c6;
-    }
-    .open {
-        transform: translate(0%);
     }
 
-    .navlinks-container a {
-        font-size: 18px;
-        margin: 10px 0;
-    }
-
-    .nav-authentication {
-        order: 3;
-        margin-left: 0;
-    }
-    .sign-btns {
-        display: none;
-    }
-
-    .user-toggler {
+    .navbar .nav-menu .nav-link {
+        color: var(--dark-color);
         display: block;
-        cursor: pointer;
-        border: none;
+        margin-top: 17px;
+        font-size: var(--font-size-1);
     }
 
-    .user-toggler img {
-        width: 20px;
-    }
-}
-
-@media (max-width: 500px) {
-
-  #content {
-    padding: 56px 32px 0 32px;
+    .hero-section .section-content {
+        gap: 50px;
+        text-align: center;
+        padding: 30px 20px 20px;
+        flex-direction: column-reverse;
+        justify-content: center;
     }
 
-    .nav-icon img {
-        width: 26px;
+    .hero-section .hero-details :is(.subtitle, .description) {
+        max-width: 100%;
     }
-    .nav-icon span {
-        font-size: 18px;
+
+    .hero-section .hero-details .buttons {
+        justify-content: center;
+    }
+
+    .hero-section .hero-image-wrapper {
+        max-width: 270px;
+        margin-right: 0;
+    }
+
+    .about-section .section-content {
+        flex-direction: column-reverse;
+        /*   https://www.youtube.com/watch?v=MYFgtnKMDp4&t=521s 
+        *                     à 
+        *                   32'15"                            */
+    }
+    .logo {
+        margin-bottom: -6px;
+        width: 28px;
+        height: 28px;
+    }
+
+    .about-hero .social-link-list .social-link {
+        font-size: var(--font-size-xs);
     }
 }
