only light mode

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    color-scheme: light only;
+    color-scheme: only light;
     
     /* Colors */
     --white-color: #3d7489;
@@ -275,7 +275,6 @@ header .navbar {
 /* Responsive media query code for max width 920px */
 @media screen and (max-width: 1060px) {
     :root {
-        color-scheme: light only;
         --font-size-m: 1rem;
         --font-size-1: 1.3rem;
         --font-size-xl: 1.5rem;
