--- a/style.css
+++ b/style.css
@@ -400,8 +400,8 @@ header .navbar {
 
     .navbar :where(#menu-close-button, #menu-open-button):hover {
         background-color: var(--secondary-color); /* Couleur du disque */
-        color: var(--primary-color); /* Couleur de l'icône par-dessus le disque */
-        opacity: 0.3; /* Rend le disque "fade" (semi-transparent) */
+        color: #121212 /* var(--primary-color); Couleur de l'icône par-dessus le disque */
+        opacity: 0.&; /* Rend le disque "fade" (semi-transparent) */
     }
     
     /* Styling for Menu Buttons on hover
@@ -415,6 +415,7 @@ header .navbar {
         *                     à 
         *                   32'15"                            */
 }
+
 
 
 
