--- a/style.css
+++ b/style.css
@@ -326,9 +326,14 @@ header .navbar {
     }
 
     .navbar #menu-close-button {
-        position: absolute;
-        right: 30px;
-        top: 30px;
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    padding: 8px;
+    border: 2px solid var(--medium-gray-color); /* Ajoute un cercle gris clair */
+    border-radius: var(--border-radius-circle); /* Rend la bordure circulaire */
+    color: var(--dark-color); /* Rend l'icône noire et visible */
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     }
 
     .navbar #menu-open-button {
@@ -414,6 +419,7 @@ header .navbar {
         *                     à 
         *                   32'15"                            */
 }
+
 
 
 
