--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@ header .navbar {
     margin: 17px 0 30px;
     text-align: center;
     font-size: var(--font-size-m);
+    line-height: 1.8;
 }
 
 .about-section .social-link-list {
@@ -321,7 +322,7 @@ header .navbar {
 
 .styled-form label {
     font-size: 1rem;
-    color: #3b3737;
+    color: var(--secondary-color);
     font-weight: 500;
 }
 
@@ -332,7 +333,7 @@ header .navbar {
     border-radius: 8px;
     padding: 0.8rem 1rem;
     font-size: 1rem;
-    background: #faf9f6;
+    background: var(--secondary-color);
     color: #333;
     transition: border-color 0.2s;
     resize: vertical;
@@ -488,6 +489,7 @@ header .navbar {
         *                     à 
         *                   32'15"                            */
 }
+
 
 
 
